samples/_failures_safe/1761280887_ac2eba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_989a429e.c: In function ‘main’:
./samples/SAFE/__tmp_989a429e.c:143:9: error: expected declaration or statement at end of input
  143 |         if (!read_matrix(&a)) {
      |         ^~
./samples/SAFE/__tmp_989a429e.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_989a429e.c:143:9: error: expected declaration or statement at end of input
